--- a/Learnd_backend/integration/src/main/resources/application.properties
+++ b/Learnd_backend/integration/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=integration
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=my-group-id
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+server.port=8081
