--- a/Learnd_frontend/package.json
+++ b/Learnd_frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.87.1",
     "axios": "^1.7.9",
     "react": "^18.2.43",
     "react-dom": "^18.3.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^24.3.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
