--- a/Learnd_backend/.gitignore
+++ b/Learnd_backend/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 !**/src/main/resources/application.properties
+learnd_main/src/main/resources/application.properties
+/Users/jackiezhong/Desktop/Learnd/Learnd_backend/learnd_main/src/main/resources/application.properties
 
 
 ### STS ###
