--- a/Learnd_frontend/package.json
+++ b/Learnd_frontend/package.json
@@ -15,10 +15,12 @@
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.7.9",
     "react": "^18.2.43",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.21.2",
+    "react-tooltip": "^5.29.1",
     "tailwindcss": "^4.1.10",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
