--- a/Learnd_frontend/package.json
+++ b/Learnd_frontend/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.43",
     "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^18.3.1",
+    "react-force-graph": "^1.48.1",
+    "react-force-graph-2d": "^1.29.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.21.2",
